--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <header class="bg-cover bg-center h-[100vh] relative" style="background-image: url(./Game/k-0.webp);">
+  <header class="bg-cover bg-center h-[100vh] relative" style="background-image: url(Game/k-0.webp);">
     <nav class="px-6 flex justify-between">
       <div>
         <h1
