--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <header class="bg-cover bg-center h-[100vh] relative" style="background-image: url(Game/k-0.webp);">
+  <header class="bg-cover bg-center h-[100vh] relative" style="background-image: url(/Game/k-0.webp);">
     <nav class="px-6 flex justify-between">
       <div>
         <h1
@@ -56,6 +56,8 @@
       <h3 class="text-slate-900 text-[1.15rem] md:text-[2rem] xl:text-[2.75rem] font-semibold capitalize md:tracking-wider ">The Very Best in Mobile Gaming
       </h3>
       <div class="flex space-x-4 pt-8">
+        <a href="App.HTML"><img src="https://games-zerone01.netlify.app/Game/Google Play.webp" alt="" class="w-[150px] h-[41px] md:h-[50px] rounded-xl"></a>
+        <a href="App.HTML"><img src="https://games-zerone01.netlify.app/Game/Apple Store.webp" alt="" class="w-[150px] h-[40px] md:h-[50px] rounded-xl"></a>
       </div>
     </article>
   </header>
