--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
   <main class="bg-[#CCCCFF] w-[100%] absolute pb-[5rem]">
     <section class="block sm:flex justify-between px-4 md:px-6 lg:px-12 -mt-[5rem] ">
       <article class="w-[230px] h-[350px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-1 md:px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
-        style="background-image: url(./Photos/ozkan.jpg);">
+        style="background-image: url(ozkan.jpg);">
         <h3 class="text-white text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-8 md:pt-4 lg:pt-8">Kipon</h3>
         <p class="text-white text-xl md:text-2xl font-[cursive] tracking-wide text-center pt-12">casual-free</p>
       </article>
       <!-- end of article-1 -->
       <article class="w-[230px] h-[350px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
-        style="background-image: url(./Photos/agenda.jpg);">
+        style="background-image: url(agenda.jpg);">
         <h3 class="text-white text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-8 md:pt-4 lg:pt-8">Robotrix</h3>
         <p class="text-white text-xl md:text-2xl font-[cursive] tracking-wide text-center pt-12">RPG - free</p>
       </article>
       <!-- end of article-2 -->
       <article class="w-[230px] h-[350px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
-        style="background-image: url(./Photos/arna.jpg);">
+        style="background-image: url(arna.jpg);">
         <h3 class="text-white text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-8 md:pt-4 lg:pt-8">Treasure box </h3>
         <p class="text-white text-xl md:text-2xl font-[cursive] tracking-wide text-center pt-12">Adventure - free</p>
       </article>
@@ -116,7 +116,7 @@
     </section>
     <section class="py-[6rem]">
       <div class="md:h-[100vh] bg-cover bg-center"
-        style="background-image: url(./Photos/anstasi.jpg);">
+        style="background-image: url(anstasi.jpg);">
         <div class="md:w-[70vw] mx-auto px-6 md:px-12 lg:px-16 py-12 md:py-0 grid md:grid-cols-2 md:gap-y-8 lg:gap-y-16 md:gap-x-24 lg:gap-x-32">
           <article class="bg-slate-100 w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-6 md:p-4 lg:p-8 md:-mt-[6rem] mb-12 md:mb-0 ">
             <div class="flex space-x-6 items-center">
@@ -131,15 +131,15 @@
             <p class="py-8 text-slate-800 font-medium">I'm a paragraph. Click here to add your own text and edit me. I’m
               a great place for you to tell a story and let your users know a little more about you.</p>
             <div class="flex space-x-4">
-              <a href="App.HTML"><img src="./Game/Google Play.webp" alt="" class="w-[100px] rounded-lg bg-cover"></a>
-              <a href="App.HTML"><img src="./Game/Apple Store.webp" alt="" class="w-[100px] bg-cover"></a>
+              <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[100px] rounded-lg bg-cover"></a>
+              <a href="App.HTML"><img src="Apple Store.webp" alt="" class="w-[100px] bg-cover"></a>
             </div>
           </article>
           <!-- article-1 -->
           <article class="bg-slate-100 w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-6 md:p-4 lg:p-8 md:-mt-[6rem] mb-12 md:mb-0">
             <div class="flex space-x-6 items-center">
               <div>
-                <img src="./Game/k-6.webp" alt="" class="rounded-2xl bg-cover">
+                <img src="k-6.webp" alt="" class="rounded-2xl bg-cover">
               </div>
               <div>
                 <h2 class="text-2xl text-slate-800 font-medium font-[Amarante] tracking-wide capitalize ">Robotix</h2>
@@ -149,15 +149,15 @@
             <p class="py-8 text-slate-800 font-medium">I'm a paragraph. Click here to add your own text and edit me. I’m
               a great place for you to tell a story and let your users know a little more about you.</p>
             <div class="flex space-x-4">
-              <a href="App.HTML"><img src="./Game/Google Play.webp" alt="" class="w-[100px] rounded-lg bg-cover"></a>
-              <a href="App.HTML"><img src="./Game/Apple Store.webp" alt="" class="w-[100px] bg-cover"></a>
+              <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[100px] rounded-lg bg-cover"></a>
+              <a href="App.HTML"><img src="Apple Store.webp" alt="" class="w-[100px] bg-cover"></a>
             </div>
           </article>
           <!-- article-2 -->
           <article class="bg-slate-100 w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-6 md:p-4 lg:p-8 ">
             <div class="flex space-x-6 items-center">
               <div>
-                <img src="./Game/k-4.webp" alt="" class="rounded-2xl bg-cover">
+                <img src="k-4.webp" alt="" class="rounded-2xl bg-cover">
               </div>
               <div>
                 <h2 class="text-2xl text-slate-800 font-medium  font-[Amarante] tracking-wide capitalize ">Treasure Bok
@@ -168,8 +168,8 @@
             <p class="py-8 text-slate-800 font-medium">I'm a paragraph. Click here to add your own text and edit me. I’m
               a great place for you to tell a story and let your users know a little more about you.</p>
             <div class="flex space-x-4">
-              <a href="App.HTML"><img src="./Game/Google Play.webp" alt="" class="w-[100px] rounded-lg bg-cover"></a>
-              <a href="App.HTML"><img src="./Game/Apple Store.webp" alt="" class="w-[100px] bg-cover"></a>
+              <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[100px] rounded-lg bg-cover"></a>
+              <a href="App.HTML"><img src="Apple Store.webp" alt="" class="w-[100px] bg-cover"></a>
             </div>
           </article>
           <!-- article-3 -->
@@ -178,7 +178,7 @@
     </section>
     <section class="md:pt-[10rem]  ">
       <div class="bg-cover bg-[40%] md:bg-[100%] h-[600px] md:h-[800px] w-[100%] mx-auto text-center lg:text-start"
-        style="background-image: url(./Photos/atice.jpg);">
+        style="background-image: url(atice.jpg);">
         <div class="bg-[#ef6c5b6e] h-[600px] md:h-[800px] w-full px-6 md:px-12 pt-[10rem]">
           <h3 class="text-[1.15rem] sm:text-[1.75rem] md:text-[2rem] text-white capitalize tracking-wider font-[Cabin] ">Jon Our Team 1480</h3>
           <h1 class="text-[1.75rem] sm:text-[2rem] md:text-[3rem] text-white sm:font-medium md:font-semibold font-[Amarante] py-12 leading-none md:leading-tight w-[45vw] md:w-[60vw] lg:w-[45vw] mx-auto lg:mx-0  ">it take’s best
@@ -222,7 +222,7 @@
       <!-- /----/ -->
       <div class="px-4 md:px-0">
         <div class="hidden md:grid md:-mt-[10rem] lg:-mt-[15rem]">
-          <img src="./Photos/andria.jpg" alt=""
+          <img src="andria.jpg" alt=""
             class="w-[400px] md:w-[320px] lg:w-[400px] h-[400px] md:[250px] lg:h-[400px] rounded-lg opacity-75 ">
         </div>
         <form class="mt-12 bg-[#EE4933] rounded-lg p-4 sm:p-8 md:py-4 lg:p-8">
