--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
           more</button>
       </div>
       <div class="w-[80vw] md:w-[60vw] mx-auto pt-6 md:pt-[2rem] lg:pt-[5rem] pl-6 sm:pl-0">
-        <img src="./Game/k-1.webp" alt="" class="rounded-lg mx-auto bg-center bg-center">
-        <img src="./Game/k-5.webp" alt="" class="-mt-[5rem] sm:-mt-[8rem] md:-mt-[7.5rem] lg:-mt-[10rem] xl:-mt-[10rem] -ml-[2.5rem] sm:-ml-[3.40rem] md:-ml-[3.5rem] lg:-ml-[4rem] xl:-ml-[2rem] w-[80px] sm:w-[120px] lg:w-[160px]">
+        <img src="k-1.webp" alt="" class="rounded-lg mx-auto bg-center bg-center">
+        <img src="k-5.webp" alt="" class="-mt-[5rem] sm:-mt-[8rem] md:-mt-[7.5rem] lg:-mt-[10rem] xl:-mt-[10rem] -ml-[2.5rem] sm:-ml-[3.40rem] md:-ml-[3.5rem] lg:-ml-[4rem] xl:-ml-[2rem] w-[80px] sm:w-[120px] lg:w-[160px]">
       </div>
     </section>
     <section class="mb-[3rem] md:pb-[5rem] w-[90vw] md:w-[60vw] mx-auto">
@@ -121,7 +121,7 @@
           <article class="bg-slate-100 w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-6 md:p-4 lg:p-8 md:-mt-[6rem] mb-12 md:mb-0 ">
             <div class="flex space-x-6 items-center">
               <div>
-                <img src="./Game/k-2.webp" alt="" class="rounded-2xl bg-cover">
+                <img src="k-2.webp" alt="" class="rounded-2xl bg-cover">
               </div>
               <div>
                 <h2 class="text-2xl text-slate-800 font-medium font-[Amarante] tracking-wide capitalize ">Kipon</h2>
