--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </article>
   </header>
-  <main class="bg-[#CCCCFF] w-[100%] absolute pb-[5rem]">
+  <main class="bg-[#e3e3e3] w-[100%] absolute pb-[5rem]">
     <section class="block sm:flex justify-between px-4 md:px-6 lg:px-12 -mt-[5rem] ">
       <article class="w-[230px] h-[350px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-1 md:px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
         style="background-image: url(ozkan.jpg);">
