--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
 <body>
   <header class="bg-cover bg-center h-[100vh] relative" style="background-image: url(k-0.webp);">
-    <nav class="px-6 flex justify-between">
+    <nav class="px-2 sm:px-6 flex justify-between">
       <div>
         <h1
-          class="text-xl md:text-3xl text-white font-[Kenia] bg-red-500 px-2 md:px-3 py-1 md:py-2 rounded-b-xl tracking-wide capitalize shadow-lg">
-          Tripo
-          Gams </h1>
+          class="text-base sm:text-xl md:text-3xl text-white font-[Kenia] bg-red-500 px-1 sm:px-2 md:px-3 py-1 md:py-2 rounded-b-xl tracking-wide capitalize shadow-lg">
+          Tripo Gams 
+        </h1>
       </div>
       <ul class="hidden md:flex items-center shadow-lg ">
         <li
@@ -47,49 +47,49 @@
           <a href="App.HTML">Contact</a>
         </li>
       </ul>
-      <div class="md:hidden">
-        <span class="text-3xl text-red-400 cursor-pointer hover:shadow-lg hover:text-red-500"><i class="fas fa-bars"></i></span>
+      <div class="mt-1 sm:mt-0 md:hidden">
+        <span class="text-2xl sm:text-3xl text-red-400 cursor-pointer hover:shadow-lg hover:text-red-500"><i class="fas fa-bars"></i></span>
       </div>
     </nav>
-    <article class="grid items-center pt-[6rem] px-12">
-      <h1 class="text-[1.75rem] md:text-[3rem] xl:text-[4.5rem] font-[Amarante] font-semibold text-slate-800 pb-2 md:pb-4">Made to Be Played</h1>
+    <article class="grid items-center pt-[6rem] px-6 sm:px-12">
+      <h1 class="text-[3rem] sm:text-[1.75rem] md:text-[3rem] xl:text-[4.5rem] font-[Amarante] font-semibold text-slate-800 pb-2 md:pb-4">Made to Be Played</h1>
       <h3 class="text-slate-900 text-[1.15rem] md:text-[2rem] xl:text-[2.75rem] font-semibold capitalize md:tracking-wider ">The Very Best in Mobile Gaming
       </h3>
-      <div class="flex space-x-4 pt-8">
-        <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[150px] h-[41px] md:h-[50px] rounded-xl"></a>
+      <div class="sm:flex space-x-4 pt-8">
+        <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[150px] h-[41px] md:h-[50px] rounded-xl mb-2"></a>
         <a href="App.HTML"><img src="Apple Store.webp" alt="" class="w-[150px] h-[40px] md:h-[50px] rounded-xl"></a>
       </div>
     </article>
   </header>
-  <main class="bg-[#e3e3e3] w-[100%] absolute pb-[5rem]">
-    <section class="block sm:flex justify-between px-4 md:px-6 lg:px-12 -mt-[5rem] ">
-      <article class="w-[230px] h-[350px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-1 md:px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
+  <main class="bg-[#CCCCFF] w-[100%] absolute pb-[5rem]">
+    <section class="block sm:flex justify-between px-4 md:px-6 lg:px-12 -mt-[2rem] sm:-mt-[5rem] ">
+      <article class="w-[180px] h-[340px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-1 md:px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
         style="background-image: url(ozkan.jpg);">
         <h3 class="text-white text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-8 md:pt-4 lg:pt-8">Kipon</h3>
         <p class="text-white text-xl md:text-2xl font-[cursive] tracking-wide text-center pt-12">casual-free</p>
       </article>
       <!-- end of article-1 -->
-      <article class="w-[230px] h-[350px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
+      <article class="w-[180px] h-[340px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
         style="background-image: url(agenda.jpg);">
         <h3 class="text-white text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-8 md:pt-4 lg:pt-8">Robotrix</h3>
         <p class="text-white text-xl md:text-2xl font-[cursive] tracking-wide text-center pt-12">RPG - free</p>
       </article>
       <!-- end of article-2 -->
-      <article class="w-[230px] h-[350px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
+      <article class="w-[180px] h-[340px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
         style="background-image: url(arna.jpg);">
         <h3 class="text-white text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-8 md:pt-4 lg:pt-8">Treasure box </h3>
         <p class="text-white text-xl md:text-2xl font-[cursive] tracking-wide text-center pt-12">Adventure - free</p>
       </article>
       <!-- end of article-3 -->
       <article
-        class="w-[230px] h-[350px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-gradient-to-b from-amber-300 to-[#E1604E] text-center cursor-pointer hover:bg-gradient-to-t from-amber-300 to-[#E1604E] mx-auto sm:mx-0">
-        <h3 class="text-white text-3xl sm:text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-12 sm:pt-12 md:pt-2 lg:pt-6">Explore Our Games</h3>
+        class="w-[180px] h-[340px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-gradient-to-b from-amber-300 to-[#E1604E] text-center cursor-pointer hover:bg-gradient-to-t from-amber-300 to-[#E1604E] mx-auto sm:mx-0">
+        <h3 class="text-white text-2xl sm:text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-12 sm:pt-12 md:pt-2 lg:pt-6">Explore Our Games</h3>
         <span class="text-xl sm:2xl md:text-3xl lg:text-4xl text-white font-bold"><i class="fas fa-arrow-down"></i></span>
       </article>
       <!-- end of article-4 -->
     </section>
     <section class="mb-[3rem] md:pb-[5rem] pt-[4rem] md:pt-[8rem]">
-      <div class="pb-[5rem] w-[75vw] md:w-[60vw] mx-auto  text-center">
+      <div class="pb-[5rem] w-[85vw] md:w-[60vw] mx-auto  text-center">
         <p class="text-slate-800 text-xl tracking-wide ">About Tripo</p>
         <h1 class="text-[2rem] md:text-[3rem] lg:text-[4rem] text-slate-800 capitalize tracking-wide font-[Acme] py-2 md:py-4 leading-tight">Your Source For
           Mobile Entertinement</h1>
@@ -102,9 +102,9 @@
           class="text-white bg-[#E1604E] md:text-2xl font-medium font-[Cabin] rounded-lg tracking-wide capitalize px-2 md:px-4 py-2 mt-6">learn
           more</button>
       </div>
-      <div class="w-[80vw] md:w-[60vw] mx-auto pt-6 md:pt-[2rem] lg:pt-[5rem] pl-6 sm:pl-0">
+      <div class="w-[90vw] sm:w-[80vw] md:w-[60vw] mx-auto pt-6 md:pt-[2rem] lg:pt-[5rem] pl-6 sm:pl-0">
         <img src="k-1.webp" alt="" class="rounded-lg mx-auto bg-center bg-center">
-        <img src="k-5.webp" alt="" class="-mt-[5rem] sm:-mt-[8rem] md:-mt-[7.5rem] lg:-mt-[10rem] xl:-mt-[10rem] -ml-[2.5rem] sm:-ml-[3.40rem] md:-ml-[3.5rem] lg:-ml-[4rem] xl:-ml-[2rem] w-[80px] sm:w-[120px] lg:w-[160px]">
+        <img src="k-5.webp" alt="" class="-mt-[3rem] sm:-mt-[8rem] md:-mt-[7.5rem] lg:-mt-[10rem] xl:-mt-[10rem] -ml-[1.5rem] sm:-ml-[3.40rem] md:-ml-[3.5rem] lg:-ml-[4rem] xl:-ml-[2rem] w-[50px] sm:w-[120px] lg:w-[160px]">
       </div>
     </section>
     <section class="mb-[3rem] md:pb-[5rem] w-[90vw] md:w-[60vw] mx-auto">
@@ -118,57 +118,57 @@
       <div class="md:h-[100vh] bg-cover bg-center"
         style="background-image: url(anstasi.jpg);">
         <div class="md:w-[70vw] mx-auto px-6 md:px-12 lg:px-16 py-12 md:py-0 grid md:grid-cols-2 md:gap-y-8 lg:gap-y-16 md:gap-x-24 lg:gap-x-32">
-          <article class="bg-slate-100 w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-6 md:p-4 lg:p-8 md:-mt-[6rem] mb-12 md:mb-0 ">
-            <div class="flex space-x-6 items-center">
+          <article class="bg-slate-100 sm:w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-3 sm:p-6 md:p-4 lg:p-8 md:-mt-[6rem] mb-12 md:mb-0 ">
+            <div class="flex space-x-2 sm:space-x-6 items-center">
               <div>
                 <img src="k-2.webp" alt="" class="rounded-2xl bg-cover">
               </div>
               <div>
-                <h2 class="text-2xl text-slate-800 font-medium font-[Amarante] tracking-wide capitalize ">Kipon</h2>
-                <p class="text-slate-950 font-medium font-[Cabin] capitalize tracking-wide">casual-free</p>
+                <h2 class="text-lg sm:text-2xl text-slate-800 font-medium font-[Amarante] sm:tracking-wide capitalize ">Kipon</h2>
+                <p class="text-[0.85rem] sm:text-base text-slate-950 font-medium font-[Cabin] capitalize tracking-wide">casual-free</p>
               </div>
             </div>
-            <p class="py-8 text-slate-800 font-medium">I'm a paragraph. Click here to add your own text and edit me. I’m
+            <p class="py-3 sm:py-8 text-slate-800 font-medium">I'm a paragraph. Click here to add your own text and edit me. I’m
               a great place for you to tell a story and let your users know a little more about you.</p>
-            <div class="flex space-x-4">
-              <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[100px] rounded-lg bg-cover"></a>
+            <div class="sm:flex space-x-4">
+              <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[100px] mb-2 sm:mb-0 rounded-lg bg-cover"></a>
               <a href="App.HTML"><img src="Apple Store.webp" alt="" class="w-[100px] bg-cover"></a>
             </div>
           </article>
           <!-- article-1 -->
-          <article class="bg-slate-100 w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-6 md:p-4 lg:p-8 md:-mt-[6rem] mb-12 md:mb-0">
-            <div class="flex space-x-6 items-center">
+          <article class="bg-slate-100 sm:w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-3 sm:p-6 md:p-4 lg:p-8 md:-mt-[6rem] mb-12 md:mb-0">
+            <div class="flex space-x-2 sm:space-x-6 items-center">
               <div>
                 <img src="k-6.webp" alt="" class="rounded-2xl bg-cover">
               </div>
               <div>
-                <h2 class="text-2xl text-slate-800 font-medium font-[Amarante] tracking-wide capitalize ">Robotix</h2>
-                <p class="text-slate-950 font-medium font-[Cabin] capitalize tracking-wide">RPG - free</p>
+                <h2 class="text-lg sm:text-2xl text-slate-800 font-medium font-[Amarante] sm:tracking-wide capitalize ">Robotix</h2>
+                <p class="text-[0.85rem] sm:text-base text-slate-950 font-medium font-[Cabin] capitalize tracking-wide">RPG - free</p>
               </div>
             </div>
-            <p class="py-8 text-slate-800 font-medium">I'm a paragraph. Click here to add your own text and edit me. I’m
+            <p class="py-3 sm:py-8 text-slate-800 font-medium">I'm a paragraph. Click here to add your own text and edit me. I’m
               a great place for you to tell a story and let your users know a little more about you.</p>
-            <div class="flex space-x-4">
-              <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[100px] rounded-lg bg-cover"></a>
+            <div class="sm:flex space-x-4">
+              <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[100px] mb-2 sm:mb-0 rounded-lg bg-cover"></a>
               <a href="App.HTML"><img src="Apple Store.webp" alt="" class="w-[100px] bg-cover"></a>
             </div>
           </article>
           <!-- article-2 -->
-          <article class="bg-slate-100 w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-6 md:p-4 lg:p-8 ">
-            <div class="flex space-x-6 items-center">
+          <article class="bg-slate-100 sm:w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-3 sm:p-6 md:p-4 lg:p-8 ">
+            <div class="flex space-x-2 sm:space-x-6 items-center">
               <div>
                 <img src="k-4.webp" alt="" class="rounded-2xl bg-cover">
               </div>
               <div>
-                <h2 class="text-2xl text-slate-800 font-medium  font-[Amarante] tracking-wide capitalize ">Treasure Bok
+                <h2 class="text-lg sm:text-2xl text-slate-800 font-medium  font-[Amarante] sm:tracking-wide capitalize ">Treasure Bok
                 </h2>
-                <p class="text-slate-950 font-medium font-[Cabin] capitalize tracking-wide">Adventure - free</p>
+                <p class="text-[0.85rem] sm:text-base text-slate-950 font-medium font-[Cabin] capitalize sm:tracking-wide">Adventure - free</p>
               </div>
             </div>
-            <p class="py-8 text-slate-800 font-medium">I'm a paragraph. Click here to add your own text and edit me. I’m
+            <p class="py-3 sm:py-8 text-slate-800 font-medium">I'm a paragraph. Click here to add your own text and edit me. I’m
               a great place for you to tell a story and let your users know a little more about you.</p>
-            <div class="flex space-x-4">
-              <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[100px] rounded-lg bg-cover"></a>
+            <div class="sm:flex space-x-4 ">
+              <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[100px] mb-2 sm:mb-0 rounded-lg bg-cover"></a>
               <a href="App.HTML"><img src="Apple Store.webp" alt="" class="w-[100px] bg-cover"></a>
             </div>
           </article>
@@ -179,7 +179,7 @@
     <section class="md:pt-[10rem]  ">
       <div class="bg-cover bg-[40%] md:bg-[100%] h-[600px] md:h-[800px] w-[100%] mx-auto text-center lg:text-start"
         style="background-image: url(atice.jpg);">
-        <div class="bg-[#ef6c5b6e] h-[600px] md:h-[800px] w-full px-6 md:px-12 pt-[10rem]">
+        <div class="bg-[#ef6c5b6e] h-[600px] md:h-[800px] w-full px-4 sm:px-6 md:px-12 pt-[12rem] sm:pt-[10rem]">
           <h3 class="text-[1.15rem] sm:text-[1.75rem] md:text-[2rem] text-white capitalize tracking-wider font-[Cabin] ">Jon Our Team 1480</h3>
           <h1 class="text-[1.75rem] sm:text-[2rem] md:text-[3rem] text-white sm:font-medium md:font-semibold font-[Amarante] py-12 leading-none md:leading-tight w-[45vw] md:w-[60vw] lg:w-[45vw] mx-auto lg:mx-0  ">it take’s best
             world’s talent to change the game</h1>
@@ -190,7 +190,7 @@
       </div>
     </section>
     <section class="md:px-6 lg:px-12 py-12 md:py-0 md:flex justify-between">
-      <form class="bg-white rounded-lg p-2 sm:p-6 w-[280px] sm:w-[400px] md:w-[330px] lg:w-[400px] md:-mt-[12rem] mx-auto md:mx-0 "
+      <form class="bg-white rounded-lg p-2 sm:p-6 w-[90vw] sm:w-[400px] md:w-[330px] lg:w-[400px] md:-mt-[12rem] mx-auto md:mx-0 "
         style="box-shadow: 0px 4px 16px #3635359c;margin-bottom: 5rem;">
         <h3 class="text-2xl sm:text-3xl md:text-2xl lg:text-3xl font-normal sm:font-semibold md:font-normal lg:font-semibold text-slate-800 font-[Acme] tracking-wide">Get in touch </h3>
         <p class="text-base sm:text-lg md:text-base lg:text-lg font-normal text-slate-600 py-2 ms:py-6 md:py-2 lg:py-6">I'm a paragraph. Click here to add your own text and edit me.
@@ -225,14 +225,14 @@
           <img src="andria.jpg" alt=""
             class="w-[400px] md:w-[320px] lg:w-[400px] h-[400px] md:[250px] lg:h-[400px] rounded-lg opacity-75 ">
         </div>
-        <form class="mt-12 bg-[#EE4933] rounded-lg p-4 sm:p-8 md:py-4 lg:p-8">
+        <form class="mt-12 bg-[#EE4933] rounded-lg p-2 sm:p-8 md:py-4 lg:p-8">
           <h3 class="text-start text-slate-100 sm:text-2xl md:text-xl lg:text-2xl tracking-wide capitalize font-medium font-[Acme] sm:pb-4 md:pb-2 md:pb-4">Subscribe To Our
             Newsletter</h3>
           <label for="email" class="text-slate-100 text-lg pb-2 font-[Acme] capitalize tracking-wide">email *</label>
           <div class="block sm:flex md:block lg:flex sm:space-x-4 md:space-x-0 lg:space-x-4">
-            <input required type="email" placeholder="Your Email" class="rounded-lg px-3 py-2 border-2 border-slate-300  mb-4 sm:mb-0 md:mb-4 lg:mb-0">
+            <input required type="email" placeholder="Your Email" class="w-[70vw] sm:w-auto md:w-[30vw] lg:w-auto rounded-lg px-2 sm:px-3 py-1 sm:py-2 border-2 border-slate-300  mb-4 sm:mb-0 md:mb-4 lg:mb-0">
             <button
-              class="rounded-lg text-lg text-slate-900 text-center bg-[#FFDB7E] px-6 sm:px-4 md:px-2 lg:px-4 py-2 font-[Acme] capitalize tracking-wider hover:shadow-xl ">
+              class="rounded-lg sm:text-lg text-slate-900 text-center bg-[#FFDB7E] px-4 md:px-2 lg:px-4 py-2 font-[Acme] capitalize tracking-wider hover:shadow-xl ">
               join</button>
           </div>
         </form>
