--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <header class="bg-cover bg-center h-[100vh] relative" style="background-image: url(k-0.webp);">
-    <nav class="px-2 sm:px-6 flex justify-between">
+    <nav class="px-2 sm:px-6 flex justify-between w-[95vw] mx-auto">
       <div>
         <h1
           class="text-base sm:text-xl md:text-3xl text-white font-[Kenia] bg-red-500 px-1 sm:px-2 md:px-3 py-1 md:py-2 rounded-b-xl tracking-wide capitalize shadow-lg">
@@ -51,49 +51,49 @@
         <span class="text-2xl sm:text-3xl text-red-400 cursor-pointer hover:shadow-lg hover:text-red-500"><i class="fas fa-bars"></i></span>
       </div>
     </nav>
-    <article class="grid items-center pt-[6rem] px-6 sm:px-12">
-      <h1 class="text-[3rem] sm:text-[1.75rem] md:text-[3rem] xl:text-[4.5rem] font-[Amarante] font-semibold text-slate-800 pb-2 md:pb-4">Made to Be Played</h1>
-      <h3 class="text-slate-900 text-[1.15rem] md:text-[2rem] xl:text-[2.75rem] font-semibold capitalize md:tracking-wider ">The Very Best in Mobile Gaming
+    <article class="grid items-center pt-[6rem] px-6 sm:px-12 w-[85vw] ">
+      <h1 class="text-[3rem] sm:text-[3.5rem] md:text-[3.5rem] xl:text-[4.5rem] font-[Amarante] font-semibold text-slate-800 pb-2 md:pb-4">Made to Be Played</h1>
+      <h3 class="text-slate-900 text-[2.75rem] md:text-[3rem] xl:text-[3.875rem] font-semibold capitalize md:tracking-wider ">The Very Best in Mobile Gaming
       </h3>
-      <div class="sm:flex space-x-4 pt-8">
+      <div class="sm:flex space-x-4 pt-12 sm:pt-8">
         <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[150px] h-[41px] md:h-[50px] rounded-xl mb-2"></a>
         <a href="App.HTML"><img src="Apple Store.webp" alt="" class="w-[150px] h-[40px] md:h-[50px] rounded-xl"></a>
       </div>
     </article>
   </header>
   <main class="bg-[#CCCCFF] w-[100%] absolute pb-[5rem]">
-    <section class="block sm:flex justify-between px-4 md:px-6 lg:px-12 -mt-[2rem] sm:-mt-[5rem] ">
-      <article class="w-[180px] h-[340px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-1 md:px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
+    <section class="block sm:flex justify-between px-4 md:px-6 lg:px-12 -mt-[5rem] ">
+      <article class="w-[220px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-1 md:px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
         style="background-image: url(ozkan.jpg);">
         <h3 class="text-white text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-8 md:pt-4 lg:pt-8">Kipon</h3>
         <p class="text-white text-xl md:text-2xl font-[cursive] tracking-wide text-center pt-12">casual-free</p>
       </article>
       <!-- end of article-1 -->
-      <article class="w-[180px] h-[340px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
+      <article class="w-[220px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
         style="background-image: url(agenda.jpg);">
         <h3 class="text-white text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-8 md:pt-4 lg:pt-8">Robotrix</h3>
         <p class="text-white text-xl md:text-2xl font-[cursive] tracking-wide text-center pt-12">RPG - free</p>
       </article>
       <!-- end of article-2 -->
-      <article class="w-[180px] h-[340px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
+      <article class="w-[220px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
         style="background-image: url(arna.jpg);">
         <h3 class="text-white text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-8 md:pt-4 lg:pt-8">Treasure box </h3>
         <p class="text-white text-xl md:text-2xl font-[cursive] tracking-wide text-center pt-12">Adventure - free</p>
       </article>
       <!-- end of article-3 -->
       <article
-        class="w-[180px] h-[340px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-gradient-to-b from-amber-300 to-[#E1604E] text-center cursor-pointer hover:bg-gradient-to-t from-amber-300 to-[#E1604E] mx-auto sm:mx-0">
+        class="w-[220px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-gradient-to-b from-amber-300 to-[#E1604E] text-center cursor-pointer hover:bg-gradient-to-t from-amber-300 to-[#E1604E] mx-auto sm:mx-0">
         <h3 class="text-white text-2xl sm:text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-12 sm:pt-12 md:pt-2 lg:pt-6">Explore Our Games</h3>
         <span class="text-xl sm:2xl md:text-3xl lg:text-4xl text-white font-bold"><i class="fas fa-arrow-down"></i></span>
       </article>
       <!-- end of article-4 -->
     </section>
     <section class="mb-[3rem] md:pb-[5rem] pt-[4rem] md:pt-[8rem]">
-      <div class="pb-[5rem] w-[85vw] md:w-[60vw] mx-auto  text-center">
+      <div class="pb-[5rem] w-[80vw] md:w-[60vw] mx-auto  text-center">
         <p class="text-slate-800 text-xl tracking-wide ">About Tripo</p>
-        <h1 class="text-[2rem] md:text-[3rem] lg:text-[4rem] text-slate-800 capitalize tracking-wide font-[Acme] py-2 md:py-4 leading-tight">Your Source For
+        <h1 class="text-[1.75rem] md:text-[3rem] lg:text-[4rem] text-slate-800 capitalize sm:tracking-wide font-[Acme] py-2 md:py-4 leading-tight">Your Source For
           Mobile Entertinement</h1>
-        <p class="md:text-lg font-[Exo 2] tracking-wide md:tracking-wider text-slate-950">i’m a paragraph, i will click here to add own text
+        <p class="md:text-lg font-[Exo 2] sm:tracking-wide md:tracking-wider text-slate-950">i’m a paragraph, i will click here to add own text
           yo your site web ,
           it’s easy just click “Edit Text” or double click me to add your own content and changes me to anoher text, i’m
           a great place for you to tell a story and let me make let users know allitle about you
@@ -225,7 +225,7 @@
           <img src="andria.jpg" alt=""
             class="w-[400px] md:w-[320px] lg:w-[400px] h-[400px] md:[250px] lg:h-[400px] rounded-lg opacity-75 ">
         </div>
-        <form class="mt-12 bg-[#EE4933] rounded-lg p-2 sm:p-8 md:py-4 lg:p-8">
+        <form class="mt-12 bg-[#EE4933] rounded-lg p-2 sm:p-8 md:py-4 lg:p-8 w-[85vw] sm:w-auto">
           <h3 class="text-start text-slate-100 sm:text-2xl md:text-xl lg:text-2xl tracking-wide capitalize font-medium font-[Acme] sm:pb-4 md:pb-2 md:pb-4">Subscribe To Our
             Newsletter</h3>
           <label for="email" class="text-slate-100 text-lg pb-2 font-[Acme] capitalize tracking-wide">email *</label>
