--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <header class="bg-cover bg-center h-[100vh] relative" style="background-image: url(k-0.webp);">
-    <nav class="px-2 sm:px-6 flex justify-between w-[95vw] mx-auto">
+    <nav class="px-2 sm:px-6 flex justify-between w-[80vw] sm:w-auto mx-auto">
       <div>
         <h1
           class="text-base sm:text-xl md:text-3xl text-white font-[Kenia] bg-red-500 px-1 sm:px-2 md:px-3 py-1 md:py-2 rounded-b-xl tracking-wide capitalize shadow-lg">
@@ -53,7 +53,7 @@
     </nav>
     <article class="grid items-center pt-[6rem] px-6 sm:px-12 w-[85vw] ">
       <h1 class="text-[3rem] sm:text-[3.5rem] md:text-[3.5rem] xl:text-[4.5rem] font-[Amarante] font-semibold text-slate-800 pb-2 md:pb-4">Made to Be Played</h1>
-      <h3 class="text-slate-900 text-[2.75rem] md:text-[3rem] xl:text-[3.875rem] font-semibold capitalize md:tracking-wider ">The Very Best in Mobile Gaming
+      <h3 class="text-slate-900 text-[2.75rem] md:text-[3rem] xl:text-[3.875rem] font-semibold capitalize md:tracking-wider pr-24">The Very Best in Mobile Gaming
       </h3>
       <div class="sm:flex space-x-4 pt-12 sm:pt-8">
         <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[150px] h-[41px] md:h-[50px] rounded-xl mb-2"></a>
@@ -130,8 +130,8 @@
             </div>
             <p class="py-3 sm:py-8 text-slate-800 font-medium">I'm a paragraph. Click here to add your own text and edit me. I’m
               a great place for you to tell a story and let your users know a little more about you.</p>
-            <div class="sm:flex space-x-4">
-              <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[100px] mb-2 sm:mb-0 rounded-lg bg-cover"></a>
+            <div class="flex space-x-4">
+              <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[100px] h-[33px] rounded-lg bg-cover"></a>
               <a href="App.HTML"><img src="Apple Store.webp" alt="" class="w-[100px] bg-cover"></a>
             </div>
           </article>
@@ -148,8 +148,8 @@
             </div>
             <p class="py-3 sm:py-8 text-slate-800 font-medium">I'm a paragraph. Click here to add your own text and edit me. I’m
               a great place for you to tell a story and let your users know a little more about you.</p>
-            <div class="sm:flex space-x-4">
-              <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[100px] mb-2 sm:mb-0 rounded-lg bg-cover"></a>
+            <div class="flex space-x-4">
+              <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[100px] h-[33px] rounded-lg bg-cover"></a>
               <a href="App.HTML"><img src="Apple Store.webp" alt="" class="w-[100px] bg-cover"></a>
             </div>
           </article>
@@ -167,8 +167,8 @@
             </div>
             <p class="py-3 sm:py-8 text-slate-800 font-medium">I'm a paragraph. Click here to add your own text and edit me. I’m
               a great place for you to tell a story and let your users know a little more about you.</p>
-            <div class="sm:flex space-x-4 ">
-              <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[100px] mb-2 sm:mb-0 rounded-lg bg-cover"></a>
+            <div class="flex space-x-4 ">
+              <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[100px] h-[33px] rounded-lg bg-cover"></a>
               <a href="App.HTML"><img src="Apple Store.webp" alt="" class="w-[100px] bg-cover"></a>
             </div>
           </article>
@@ -225,7 +225,7 @@
           <img src="andria.jpg" alt=""
             class="w-[400px] md:w-[320px] lg:w-[400px] h-[400px] md:[250px] lg:h-[400px] rounded-lg opacity-75 ">
         </div>
-        <form class="mt-12 bg-[#EE4933] rounded-lg p-2 sm:p-8 md:py-4 lg:p-8 w-[85vw] sm:w-auto">
+        <form class="mt-12 bg-[#EE4933] rounded-lg p-2 sm:p-8 md:py-4 lg:p-8 w-[85vw] mx-auto md:mx-0 sm:w-auto">
           <h3 class="text-start text-slate-100 sm:text-2xl md:text-xl lg:text-2xl tracking-wide capitalize font-medium font-[Acme] sm:pb-4 md:pb-2 md:pb-4">Subscribe To Our
             Newsletter</h3>
           <label for="email" class="text-slate-100 text-lg pb-2 font-[Acme] capitalize tracking-wide">email *</label>
