--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-  <header class="bg-cover bg-center h-[100vh] relative" style="background-image: url(k-0.webp);">
-    <nav class="px-2 sm:px-6 flex justify-between w-[80vw] sm:w-auto mx-auto">
+  <header class="bg-cover bg-center h-[100vh] w-full relative" style="background-image: url(k-0.webp);">
+    <nav class="px-2 sm:px-6 flex justify-between ">
       <div>
         <h1
           class="text-base sm:text-xl md:text-3xl text-white font-[Kenia] bg-red-500 px-1 sm:px-2 md:px-3 py-1 md:py-2 rounded-b-xl tracking-wide capitalize shadow-lg">
@@ -51,9 +51,9 @@
         <span class="text-2xl sm:text-3xl text-red-400 cursor-pointer hover:shadow-lg hover:text-red-500"><i class="fas fa-bars"></i></span>
       </div>
     </nav>
-    <article class="grid items-center pt-[6rem] px-6 sm:px-12 w-[85vw] ">
+    <article class="grid items-center pt-[6rem] px-6 sm:px-12 ">
       <h1 class="text-[3rem] sm:text-[3.5rem] md:text-[3.5rem] xl:text-[4.5rem] font-[Amarante] font-semibold text-slate-800 pb-2 md:pb-4">Made to Be Played</h1>
-      <h3 class="text-slate-900 text-[2.75rem] md:text-[3rem] xl:text-[3.875rem] font-semibold capitalize md:tracking-wider pr-24">The Very Best in Mobile Gaming
+      <h3 class="text-slate-900 text-[2rem] md:text-[3rem] xl:text-[3.875rem] font-semibold capitalize md:tracking-wider ">The Very Best in Mobile Gaming
       </h3>
       <div class="sm:flex space-x-4 pt-12 sm:pt-8">
         <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[150px] h-[41px] md:h-[50px] rounded-xl mb-2"></a>
@@ -62,27 +62,27 @@
     </article>
   </header>
   <main class="bg-[#CCCCFF] w-[100%] absolute pb-[5rem]">
-    <section class="block sm:flex justify-between px-4 md:px-6 lg:px-12 -mt-[5rem] ">
-      <article class="w-[220px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-1 md:px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
+    <section class="block sm:flex justify-between px-4 md:px-6 lg:px-12 -mt-[2rem] md:-mt-[5rem] ">
+      <article class="w-[230px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-1 md:px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
         style="background-image: url(ozkan.jpg);">
         <h3 class="text-white text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-8 md:pt-4 lg:pt-8">Kipon</h3>
         <p class="text-white text-xl md:text-2xl font-[cursive] tracking-wide text-center pt-12">casual-free</p>
       </article>
       <!-- end of article-1 -->
-      <article class="w-[220px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
+      <article class="w-[230px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
         style="background-image: url(agenda.jpg);">
         <h3 class="text-white text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-8 md:pt-4 lg:pt-8">Robotrix</h3>
         <p class="text-white text-xl md:text-2xl font-[cursive] tracking-wide text-center pt-12">RPG - free</p>
       </article>
       <!-- end of article-2 -->
-      <article class="w-[220px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
+      <article class="w-[230px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
         style="background-image: url(arna.jpg);">
         <h3 class="text-white text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-8 md:pt-4 lg:pt-8">Treasure box </h3>
         <p class="text-white text-xl md:text-2xl font-[cursive] tracking-wide text-center pt-12">Adventure - free</p>
       </article>
       <!-- end of article-3 -->
       <article
-        class="w-[220px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-gradient-to-b from-amber-300 to-[#E1604E] text-center cursor-pointer hover:bg-gradient-to-t from-amber-300 to-[#E1604E] mx-auto sm:mx-0">
+        class="w-[230px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-gradient-to-b from-amber-300 to-[#E1604E] text-center cursor-pointer hover:bg-gradient-to-t from-amber-300 to-[#E1604E] mx-auto sm:mx-0">
         <h3 class="text-white text-2xl sm:text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-12 sm:pt-12 md:pt-2 lg:pt-6">Explore Our Games</h3>
         <span class="text-xl sm:2xl md:text-3xl lg:text-4xl text-white font-bold"><i class="fas fa-arrow-down"></i></span>
       </article>
@@ -118,7 +118,7 @@
       <div class="md:h-[100vh] bg-cover bg-center"
         style="background-image: url(anstasi.jpg);">
         <div class="md:w-[70vw] mx-auto px-6 md:px-12 lg:px-16 py-12 md:py-0 grid md:grid-cols-2 md:gap-y-8 lg:gap-y-16 md:gap-x-24 lg:gap-x-32">
-          <article class="bg-slate-100 sm:w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-3 sm:p-6 md:p-4 lg:p-8 md:-mt-[6rem] mb-12 md:mb-0 ">
+          <article class="bg-slate-100 w-[80vw] sm:w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-3 sm:p-6 md:p-4 lg:p-8 md:-mt-[6rem] mb-12 md:mb-0 ">
             <div class="flex space-x-2 sm:space-x-6 items-center">
               <div>
                 <img src="k-2.webp" alt="" class="rounded-2xl bg-cover">
@@ -136,7 +136,7 @@
             </div>
           </article>
           <!-- article-1 -->
-          <article class="bg-slate-100 sm:w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-3 sm:p-6 md:p-4 lg:p-8 md:-mt-[6rem] mb-12 md:mb-0">
+          <article class="bg-slate-100 w-[80vw] sm:w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-3 sm:p-6 md:p-4 lg:p-8 md:-mt-[6rem] mb-12 md:mb-0">
             <div class="flex space-x-2 sm:space-x-6 items-center">
               <div>
                 <img src="k-6.webp" alt="" class="rounded-2xl bg-cover">
@@ -154,7 +154,7 @@
             </div>
           </article>
           <!-- article-2 -->
-          <article class="bg-slate-100 sm:w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-3 sm:p-6 md:p-4 lg:p-8 ">
+          <article class="bg-slate-100 w-[80vw] sm:w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-3 sm:p-6 md:p-4 lg:p-8 ">
             <div class="flex space-x-2 sm:space-x-6 items-center">
               <div>
                 <img src="k-4.webp" alt="" class="rounded-2xl bg-cover">
@@ -225,7 +225,7 @@
           <img src="andria.jpg" alt=""
             class="w-[400px] md:w-[320px] lg:w-[400px] h-[400px] md:[250px] lg:h-[400px] rounded-lg opacity-75 ">
         </div>
-        <form class="mt-12 bg-[#EE4933] rounded-lg p-2 sm:p-8 md:py-4 lg:p-8 w-[85vw] mx-auto md:mx-0 sm:w-auto">
+        <form class="mt-12 bg-[#EE4933] rounded-lg p-2 sm:p-8 md:py-4 lg:p-8 w-[75vw] mx-auto md:mx-0 sm:w-auto">
           <h3 class="text-start text-slate-100 sm:text-2xl md:text-xl lg:text-2xl tracking-wide capitalize font-medium font-[Acme] sm:pb-4 md:pb-2 md:pb-4">Subscribe To Our
             Newsletter</h3>
           <label for="email" class="text-slate-100 text-lg pb-2 font-[Acme] capitalize tracking-wide">email *</label>
