--- a/index.html
+++ b/index.html
@@ -62,27 +62,27 @@
     </article>
   </header>
   <main class="bg-[#CCCCFF] w-[100%] absolute pb-[5rem]">
-    <section class="block sm:flex justify-between px-4 md:px-6 lg:px-12 -mt-[2rem] md:-mt-[5rem] ">
-      <article class="w-[230px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-1 md:px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
+    <section class="block sm:flex justify-between px-4 md:px-6 lg:px-12 -mt-[2rem] md:-mt-[3rem] ">
+      <article class="w-[250px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-1 md:px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
         style="background-image: url(ozkan.jpg);">
         <h3 class="text-white text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-8 md:pt-4 lg:pt-8">Kipon</h3>
         <p class="text-white text-xl md:text-2xl font-[cursive] tracking-wide text-center pt-12">casual-free</p>
       </article>
       <!-- end of article-1 -->
-      <article class="w-[230px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
+      <article class="w-[250px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
         style="background-image: url(agenda.jpg);">
         <h3 class="text-white text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-8 md:pt-4 lg:pt-8">Robotrix</h3>
         <p class="text-white text-xl md:text-2xl font-[cursive] tracking-wide text-center pt-12">RPG - free</p>
       </article>
       <!-- end of article-2 -->
-      <article class="w-[230px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
+      <article class="w-[250px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-cover mx-auto mb-8 md:mx-0 "
         style="background-image: url(arna.jpg);">
         <h3 class="text-white text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-8 md:pt-4 lg:pt-8">Treasure box </h3>
         <p class="text-white text-xl md:text-2xl font-[cursive] tracking-wide text-center pt-12">Adventure - free</p>
       </article>
       <!-- end of article-3 -->
       <article
-        class="w-[230px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-gradient-to-b from-amber-300 to-[#E1604E] text-center cursor-pointer hover:bg-gradient-to-t from-amber-300 to-[#E1604E] mx-auto sm:mx-0">
+        class="w-[250px] h-[300px] sm:w-[140px] sm:h-[240px] md:w-[170px] md:h-[280px] lg:w-[225px] lg:h-[350px] rounded-xl px-3 py-[5rem] sm:py-6 md:py-[5rem] bg-gradient-to-b from-amber-300 to-[#E1604E] text-center cursor-pointer hover:bg-gradient-to-t from-amber-300 to-[#E1604E] mx-auto sm:mx-0">
         <h3 class="text-white text-2xl sm:text-xl md:text-2xl font-[Cabin] tracking-wide capitalize text-center pt-12 sm:pt-12 md:pt-2 lg:pt-6">Explore Our Games</h3>
         <span class="text-xl sm:2xl md:text-3xl lg:text-4xl text-white font-bold"><i class="fas fa-arrow-down"></i></span>
       </article>
@@ -190,7 +190,7 @@
       </div>
     </section>
     <section class="md:px-6 lg:px-12 py-12 md:py-0 md:flex justify-between">
-      <form class="bg-white rounded-lg p-2 sm:p-6 w-[75vw] sm:w-[400px] md:w-[330px] lg:w-[400px] md:-mt-[12rem] mx-auto md:mx-0 "
+      <form class="bg-white rounded-lg p-2 sm:p-6 w-[85vw] sm:w-[400px] md:w-[330px] lg:w-[400px] md:-mt-[12rem] mx-auto md:mx-0 "
         style="box-shadow: 0px 4px 16px #3635359c;margin-bottom: 5rem;">
         <h3 class="text-2xl sm:text-3xl md:text-2xl lg:text-3xl font-normal sm:font-semibold md:font-normal lg:font-semibold text-slate-800 font-[Acme] tracking-wide">Get in touch </h3>
         <p class="text-base sm:text-lg md:text-base lg:text-lg font-normal text-slate-600 py-2 ms:py-6 md:py-2 lg:py-6">I'm a paragraph. Click here to add your own text and edit me.
@@ -225,7 +225,7 @@
           <img src="andria.jpg" alt=""
             class="w-[400px] md:w-[320px] lg:w-[400px] h-[400px] md:[250px] lg:h-[400px] rounded-lg opacity-75 ">
         </div>
-        <form class="mt-12 bg-[#EE4933] rounded-lg p-2 sm:p-8 md:py-4 lg:p-8 w-[75vw] mx-auto md:mx-0 sm:w-auto">
+        <form class="mt-12 bg-[#EE4933] rounded-lg p-2 sm:p-8 md:py-4 lg:p-8 w-[85vw] sm:w-auto mx-auto md:mx-0">
           <h3 class="text-start text-slate-100 sm:text-2xl md:text-xl lg:text-2xl tracking-wide capitalize font-medium font-[Acme] sm:pb-4 md:pb-2 md:pb-4">Subscribe To Our
             Newsletter</h3>
           <label for="email" class="text-slate-100 text-lg pb-2 font-[Acme] capitalize tracking-wide">email *</label>
