--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
     <article class="grid items-center pt-[6rem] px-6 sm:px-12 ">
       <h1 class="text-[3rem] sm:text-[3.5rem] md:text-[3.5rem] xl:text-[4.5rem] font-[Amarante] font-semibold text-slate-800 pb-2 md:pb-4">Made to Be Played</h1>
-      <h3 class="text-slate-900 text-[2rem] md:text-[3rem] xl:text-[3.875rem] font-semibold capitalize md:tracking-wider sm:w-[50vw]">The Very Best in Mobile Gaming
+      <h3 class="text-slate-900 text-[2rem] md:text-[3rem] xl:text-[3.875rem] font-semibold capitalize md:tracking-wider w-[w-80vw] sm:w-[50vw]">The Very Best in Mobile Gaming
       </h3>
       <div class="sm:flex space-x-4 pt-12 sm:pt-8">
         <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[150px] h-[41px] md:h-[50px] rounded-xl mb-2"></a>
