--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-  <header class="bg-cover bg-center h-[100vh] w-[80vw] sm:w-full relative" style="background-image: url(k-0.webp);">
-    <nav class="px-2 sm:px-6 flex justify-between ">
+  <header class="bg-cover bg-center h-[100vh] w-full relative" style="background-image: url(k-0.webp);">
+    <nav class="px-2 sm:px-6 flex justify-between  w-[80vw] sm:w-auto mx-auto">
       <div>
         <h1
           class="text-base sm:text-xl md:text-3xl text-white font-[Kenia] bg-red-500 px-1 sm:px-2 md:px-3 py-1 md:py-2 rounded-b-xl tracking-wide capitalize shadow-lg">
@@ -51,7 +51,7 @@
         <span class="text-2xl sm:text-3xl text-red-400 cursor-pointer hover:shadow-lg hover:text-red-500"><i class="fas fa-bars"></i></span>
       </div>
     </nav>
-    <article class="grid items-center pt-[6rem] pb-[2rem] px-6 sm:px-12 ">
+    <article class="grid items-center pt-[6rem] md:pb-[5rem] px-6 sm:px-12 ">
       <h1 class="text-[2rem] sm:text-[3.5rem] md:text-[3.5rem] xl:text-[4.5rem] font-[Amarante] font-semibold text-slate-800 pb-2 md:pb-4">Made to Be Played</h1>
       <h3 class="text-slate-900 text-[1.75rem] md:text-[3rem] xl:text-[3.875rem] font-semibold capitalize md:tracking-wider w-auto sm:w-[45vw] ">The Very Best in Mobile Gaming
       </h3>
