--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-  <header class="bg-cover bg-center h-[100vh] w-full relative pb-12" style="background-image: url(k-0.webp);">
-    <nav class="px-2 sm:px-6 flex justify-between  w-[60vw] sm:w-auto mx-auto">
+  <header class="bg-cover bg-center h-[100vh] w-full relative" style="background-image: url(k-0.webp);">
+    <nav class="px-2 sm:px-6 flex justify-between ">
       <div>
         <h1
           class="text-base sm:text-xl md:text-3xl text-white font-[Kenia] bg-red-500 px-1 sm:px-2 md:px-3 py-1 md:py-2 rounded-b-xl tracking-wide capitalize shadow-lg">
@@ -51,9 +51,9 @@
         <span class="text-2xl sm:text-3xl text-red-400 cursor-pointer hover:shadow-lg hover:text-red-500"><i class="fas fa-bars"></i></span>
       </div>
     </nav>
-    <article class="grid items-center pt-[6rem] md:pb-[5rem] px-6 sm:px-12 ">
-      <h1 class="text-[2rem] sm:text-[3.5rem] md:text-[3.5rem] xl:text-[4.5rem] font-[Amarante] font-semibold text-slate-800 pb-2 md:pb-4">Made to Be Played</h1>
-      <h3 class="text-slate-900 text-[1rem] md:text-[3rem] xl:text-[3.875rem] font-semibold capitalize md:tracking-wider w-auto sm:w-[45vw] ">The Very Best in Mobile Gaming
+    <article class="grid items-center pt-[6rem] px-6 sm:px-12 ">
+      <h1 class="text-[3rem] sm:text-[3.5rem] md:text-[3.5rem] xl:text-[4.5rem] font-[Amarante] font-semibold text-slate-800 pb-2 md:pb-4">Made to Be Played</h1>
+      <h3 class="text-slate-900 text-[2rem] md:text-[3rem] xl:text-[3.875rem] font-semibold capitalize md:tracking-wider sm:w-[50vw]">The Very Best in Mobile Gaming
       </h3>
       <div class="sm:flex space-x-4 pt-12 sm:pt-8">
         <a href="App.HTML"><img src="Google Play.webp" alt="" class="w-[150px] h-[41px] md:h-[50px] rounded-xl mb-2"></a>
@@ -89,7 +89,7 @@
       <!-- end of article-4 -->
     </section>
     <section class="mb-[3rem] md:pb-[5rem] pt-[4rem] md:pt-[8rem]">
-      <div class="pb-[5rem] w-[65vw] md:w-[60vw] mx-auto text-center">
+      <div class="pb-[5rem] w-[80vw] md:w-[60vw] mx-auto  text-center">
         <p class="text-slate-800 text-xl tracking-wide ">About Tripo</p>
         <h1 class="text-[1.75rem] md:text-[3rem] lg:text-[4rem] text-slate-800 capitalize sm:tracking-wide font-[Acme] py-2 md:py-4 leading-tight">Your Source For
           Mobile Entertinement</h1>
@@ -102,7 +102,7 @@
           class="text-white bg-[#E1604E] md:text-2xl font-medium font-[Cabin] rounded-lg tracking-wide capitalize px-2 md:px-4 py-2 mt-6">learn
           more</button>
       </div>
-      <div class="w-[70vw] sm:w-[80vw] md:w-[60vw] mx-auto pt-6 md:pt-[2rem] lg:pt-[5rem] pl-6 sm:pl-0">
+      <div class="w-[90vw] sm:w-[80vw] md:w-[60vw] mx-auto pt-6 md:pt-[2rem] lg:pt-[5rem] pl-6 sm:pl-0">
         <img src="k-1.webp" alt="" class="rounded-lg mx-auto bg-center bg-center">
         <img src="k-5.webp" alt="" class="-mt-[3rem] sm:-mt-[8rem] md:-mt-[7.5rem] lg:-mt-[10rem] xl:-mt-[10rem] -ml-[1.5rem] sm:-ml-[3.40rem] md:-ml-[3.5rem] lg:-ml-[4rem] xl:-ml-[2rem] w-[50px] sm:w-[120px] lg:w-[160px]">
       </div>
@@ -118,7 +118,7 @@
       <div class="md:h-[100vh] bg-cover bg-center"
         style="background-image: url(anstasi.jpg);">
         <div class="md:w-[70vw] mx-auto px-6 md:px-12 lg:px-16 py-12 md:py-0 grid md:grid-cols-2 md:gap-y-8 lg:gap-y-16 md:gap-x-24 lg:gap-x-32">
-          <article class="bg-slate-100 w-[70vw] sm:w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-3 sm:p-6 md:p-4 lg:p-8 md:-mt-[6rem] mb-12 md:mb-0 ">
+          <article class="bg-slate-100 w-[80vw] sm:w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-3 sm:p-6 md:p-4 lg:p-8 md:-mt-[6rem] mb-12 md:mb-0 ">
             <div class="flex space-x-2 sm:space-x-6 items-center">
               <div>
                 <img src="k-2.webp" alt="" class="rounded-2xl bg-cover">
@@ -136,7 +136,7 @@
             </div>
           </article>
           <!-- article-1 -->
-          <article class="bg-slate-100 w-[70vw] sm:w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-3 sm:p-6 md:p-4 lg:p-8 md:-mt-[6rem] mb-12 md:mb-0">
+          <article class="bg-slate-100 w-[80vw] sm:w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-3 sm:p-6 md:p-4 lg:p-8 md:-mt-[6rem] mb-12 md:mb-0">
             <div class="flex space-x-2 sm:space-x-6 items-center">
               <div>
                 <img src="k-6.webp" alt="" class="rounded-2xl bg-cover">
@@ -154,7 +154,7 @@
             </div>
           </article>
           <!-- article-2 -->
-          <article class="bg-slate-100 w-[70vw] sm:w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-3 sm:p-6 md:p-4 lg:p-8 ">
+          <article class="bg-slate-100 w-[80vw] sm:w-[300px] md:w-[250px] lg:w-[310px] mx-auto rounded-2xl shadow-2xl p-3 sm:p-6 md:p-4 lg:p-8 ">
             <div class="flex space-x-2 sm:space-x-6 items-center">
               <div>
                 <img src="k-4.webp" alt="" class="rounded-2xl bg-cover">
@@ -177,7 +177,7 @@
       </div>
     </section>
     <section class="md:pt-[10rem]  ">
-      <div class="bg-cover bg-[40%] w-[70vw] md:bg-[100%] h-[600px] md:h-[800px] sm:w-[100%] mx-auto text-center lg:text-start"
+      <div class="bg-cover bg-[40%] md:bg-[100%] h-[600px] md:h-[800px] w-[100%] mx-auto text-center lg:text-start"
         style="background-image: url(atice.jpg);">
         <div class="bg-[#ef6c5b6e] h-[600px] md:h-[800px] w-full px-4 sm:px-6 md:px-12 pt-[12rem] sm:pt-[10rem]">
           <h3 class="text-[1.15rem] sm:text-[1.75rem] md:text-[2rem] text-white capitalize tracking-wider font-[Cabin] ">Jon Our Team 1480</h3>
@@ -190,7 +190,7 @@
       </div>
     </section>
     <section class="md:px-6 lg:px-12 py-12 md:py-0 md:flex justify-between">
-      <form class="bg-white rounded-lg p-2 sm:p-6 w-[80vw] sm:w-[400px] md:w-[330px] lg:w-[400px] md:-mt-[12rem] mx-auto md:mx-0 "
+      <form class="bg-white rounded-lg p-2 sm:p-6 w-[85vw] sm:w-[400px] md:w-[330px] lg:w-[400px] md:-mt-[12rem] mx-auto md:mx-0 "
         style="box-shadow: 0px 4px 16px #3635359c;margin-bottom: 5rem;">
         <h3 class="text-2xl sm:text-3xl md:text-2xl lg:text-3xl font-normal sm:font-semibold md:font-normal lg:font-semibold text-slate-800 font-[Acme] tracking-wide">Get in touch </h3>
         <p class="text-base sm:text-lg md:text-base lg:text-lg font-normal text-slate-600 py-2 ms:py-6 md:py-2 lg:py-6">I'm a paragraph. Click here to add your own text and edit me.
@@ -225,7 +225,7 @@
           <img src="andria.jpg" alt=""
             class="w-[400px] md:w-[320px] lg:w-[400px] h-[400px] md:[250px] lg:h-[400px] rounded-lg opacity-75 ">
         </div>
-        <form class="mt-12 bg-[#EE4933] rounded-lg p-2 sm:p-8 md:py-4 lg:p-8 w-[80vw] sm:w-auto mx-auto md:mx-0">
+        <form class="mt-12 bg-[#EE4933] rounded-lg p-2 sm:p-8 md:py-4 lg:p-8 w-[85vw] sm:w-auto mx-auto md:mx-0">
           <h3 class="text-start text-slate-100 sm:text-2xl md:text-xl lg:text-2xl tracking-wide capitalize font-medium font-[Acme] sm:pb-4 md:pb-2 md:pb-4">Subscribe To Our
             Newsletter</h3>
           <label for="email" class="text-slate-100 text-lg pb-2 font-[Acme] capitalize tracking-wide">email *</label>
