--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <header class="bg-cover bg-center h-[100vh] w-full relative" style="background-image: url(k-0.webp);">
-    <nav class="px-2 sm:px-6 flex justify-between ">
+    <nav class="px-6 flex justify-between ">
       <div>
         <h1
           class="text-base sm:text-xl md:text-3xl text-white font-[Kenia] bg-red-500 px-1 sm:px-2 md:px-3 py-1 md:py-2 rounded-b-xl tracking-wide capitalize shadow-lg">
